sctp: fix append error cause to ERROR chunk correctly
Fix regression due to fix for CVE-2010-1173

svn path=/dists/sid/linux-2.6/; revision=15841

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * Update Spanish debconf templates, thanks to Omar Campagne
     (Closes: #580538)
   * Revert "Add EC path for Thinkpad X100."; it is incomplete and broken
+  * sctp: fix append error cause to ERROR chunk correctly (regression due
+    to fix for CVE-2010-1173)
 
   [ Aurelien Jarno ]
   * [sh4] fix sh_tmu clocksource following recent nohz changes.
