document included security fixes
svn path=/dists/sid/linux-2.6/; revision=15931

--- a/debian/changelog
+++ b/debian/changelog
@@ -43,6 +43,8 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
   * ipv6: Use interface max_desync_factor instead of static default
     (Closes: #514646)
   * Add stable 2.6.32.16-rc1
+    - Fixes CVE-2010-1641, CVE-2010-2066, CVE-2010-1187,
+      CVE-2010-1148, CVE-2010-1173 and CVE-2010-2071
   * Add drm changes from stable 2.6.33.6-rc1
   * [ia64, powerpc, sparc, x86] Enable KPROBES and KRETPROBES
     (Closes: #584130)
