proc: clean up and fix /proc/<pid>/mem handling (CVE-2012-0056)
svn path=/dists/trunk/linux-2.6/; revision=18605

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
+linux-2.6 (3.2.1-2) UNRELEASED; urgency=high
 
   [ Stefan Lippers-Hollmann ]
   * udeb: Add missing modules to nic-wireless-modules:
@@ -13,6 +13,7 @@ linux-2.6 (3.2.1-2) UNRELEASED; urgency=low
     not always exist
   * Build linux-libc-dev without multiarch if dpkg does not support it,
     to support backports
+  * proc: clean up and fix /proc/<pid>/mem handling (CVE-2012-0056)
 
   [ Aurelien Jarno ]
   * [x86] Backport KVM nested VMX fixes from 3.3 to fix warnings and
