--- a/debian/changelog
+++ b/debian/changelog
@@ -32,6 +32,7 @@ linux-2.6 (3.2.2-1) UNRELEASED; urgency=low
   * l2tp: l2tp_ip - fix possible oops on packet receive
   * macvlan: fix a possible use after free
   * tcp: fix tcp_trim_head() to adjust segment count with skb MSS
+  * [x86] KVM: fix missing checks in syscall emulation (CVE-2012-0045)
 
   [ Thorsten Glaser ]
   * [m68k] Use gcc-4.6 like (almost) all other architectures
