--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ linux (4.9.13-2) UNRELEASED; urgency=medium
     (regression in 4.8) (Closes: #856474)
   * [rt] Update to 4.9.13-rt12:
     - timer/hrtimer: check properly for a running timer
+  * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Wed, 01 Mar 2017 15:42:54 +0000
 
