tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
(cherry picked from commit 11d69f4069a047f1fa0dffa71762b54fdde4f08f)

--- a/debian/changelog
+++ b/debian/changelog
@@ -163,6 +163,7 @@ linux (4.9.8-1) UNRELEASED; urgency=medium
   * packet: fix races in fanout_add() (CVE-2017-6346)
   * ip: fix IP_CHECKSUM handling (regression in 4.0) (CVE-2017-6347)
   * irda: Fix lockdep annotations in hashbin_delete(). (CVE-2017-6348)
+  * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 27 Jan 2017 18:14:31 +0000
 
