--- a/debian/changelog
+++ b/debian/changelog
@@ -164,6 +164,8 @@ linux (4.9.8-1) UNRELEASED; urgency=medium
   * ip: fix IP_CHECKSUM handling (regression in 4.0) (CVE-2017-6347)
   * irda: Fix lockdep annotations in hashbin_delete(). (CVE-2017-6348)
   * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
+  * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
+  * userns: Avoid ABI change for CVE-2017-6874 fix
 
  -- Ben Hutchings <ben@decadent.org.uk>  Fri, 27 Jan 2017 18:14:31 +0000
 
