--- a/debian/changelog
+++ b/debian/changelog
@@ -145,6 +145,8 @@ linux (4.9.14-1) UNRELEASED; urgency=medium
   * tty: n_hdlc: get rid of racy n_hdlc.tbuf (CVE-2017-2636)
   * [rt] Refresh one patch that had a textual conflict with 4.9.14
   * Ignore ABI changes in rds and ufshcd, not useful to OOT modules
+  * ucount: Remove the atomicity from ucount->count (CVE-2017-6874)
+  * userns: Avoid ABI change for CVE-2017-6874 fix
 
   [ Salvatore Bonaccorso ]
   * ACPI / EC: Use busy polling mode when GPE is not enabled.
